--- a/FRP.vbproj
+++ b/FRP.vbproj
@@ -73,6 +73,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Annotation.vb" />
     <Compile Include="StorageManager.vb" />
     <Compile Include="frmHome.vb">
       <SubType>Form</SubType>
